style(SobreMi): spacing fixed and media for 1366px width

--- a/src/views/SobreMi/SobreMi.module.css
+++ b/src/views/SobreMi/SobreMi.module.css
@@ -2,13 +2,12 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 78vh;
+    height: 80vh;
     color: white;
     font-size: 2rem;
     padding: 0 5rem;
     box-sizing: border-box;
-    gap: 10rem;
-    margin-top: 5rem;
+    margin: 10vh 0 0 0;
 }
 .secondModule {
     display: flex;
@@ -16,13 +15,12 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 78vh;
+    height: 80vh;
     color: white;
     font-size: 1.5rem;
     padding: 0 5rem;
     box-sizing: border-box;
     gap: 5rem;
-    margin-bottom: 5rem;
 }
 .subModule {
     display: flex;
@@ -33,7 +31,7 @@
 
 .photo {
     flex: 1 1 33%;
-    max-height: 60vh;
+    max-height: 80vh;
     width: auto;
     object-fit: scale-down;
     box-sizing: border-box;
@@ -62,7 +60,7 @@
 .btnCurso {
     border-radius: 8px;
     padding: 0.6em 1.2em;
-    font-size: 1em;
+    font-size: 1.5rem;
     font-weight: 500;
     font-family: inherit;
     color: white;
@@ -73,4 +71,17 @@
 .btnCurso:hover {
     color: #1a1a1a;
     border-color: #1a1a1a;
+}
+
+@media (max-width: 1366px) {
+    .firstModule{
+        font-size: 1.5rem;
+        margin: 10vh 0;
+    }
+    .title {
+        font-size: 4rem;
+    }
+    .secondModule {
+        margin-bottom: 18vh;
+    }
 }
